wlanpi-grafana (1.0.6-27) unstable; urgency=medium

  * Update dashboards
  * Refactor Internet Monitoring data collection script, add online/offline internet status
  * Replace speedtest-cli with librespeed-cli in Internet Monitoring

 -- Jiri Brejcha <jirka@jiribrejcha.net>  Mon, 02 Oct 2023 13:47:00 +0100

wlanpi-grafana (1.0.6) unstable; urgency=medium

  * Internet dashboard uses JSON output of speedtest-cli, adds RTT to gateway and Google

 -- Jiri Brejcha <jirka@jiribrejcha.net>  Mon, 02 Oct 2023 10:56:00 +0100

wlanpi-grafana (1.0.5-2) unstable; urgency=medium

  * Rename tografana.sh to to-grafana.sh
  * Do not autostart Data Stream services
  * Rename Wi-Spy services
  * Add dependencies 

 -- Jiri Brejcha <jirka@jiribrejcha.net>  Sun, 01 Oct 2023 23:56:00 +0100

wlanpi-grafana (1.0.4-1) unstable; urgency=medium

  * Add WLAN Pi Internet (System Status) Dashboard

 -- Jiri Brejcha <jirka@jiribrejcha.net>  Tue, 20 Sep 2023 21:06:00 +0100

wlanpi-grafana (1.0.3-3) unstable; urgency=medium
  
  * Add WLAN Pi Health (System Status) Dashboard
 
 -- Jiri Brejcha <jirka@jiribrejcha.net>  Tue, 19 Sep 2023 16:16:00 +0100

wlanpi-grafana (1.0.2-1) unstable; urgency=medium

  * Add new Grafana landing page

 -- Jiri Brejcha <jirka@jiribrejcha.net>  Tue, 19 Sep 2023 11:17:00 +0100

wlanpi-grafana (1.0.1-21) unstable; urgency=medium

  * Refactor password change

 -- Jiri Brejcha <jirka@jiribrejcha.net>  Wed, 13 Sep 2023 14:58:00 +0100

wlanpi-grafana (1.0.1-20) unstable; urgency=medium

  * Start grafana-server.service before changing password

 -- Jiri Brejcha <jirka@jiribrejcha.net>  Mon, 11 Sep 2023 12:58:00 +0100

wlanpi-grafana (1.0.1-16) unstable; urgency=medium

  * Do not start and do not enable grafana-server.service after package has been installed

 -- Jiri Brejcha <jirka@jiribrejcha.net>  Fri, 08 Sep 2023 21:14:00 +0100

wlanpi-grafana (1.0.1-15) unstable; urgency=medium

  * Change default credentials to admin/wlanpi
