@@ -3,6 +3,7 @@ wlanpi-grafana (1.0.6-27) unstable; urgency=medium
   * Update dashboards
   * Refactor Internet Monitoring data collection script, add online/offline internet status
   * Replace speedtest-cli with librespeed-cli in Internet Monitoring
+  * Add option to use Ookla Speedtest.net client in Internet Monitoring - manual steps required
 
  -- Jiri Brejcha <jirka@jiribrejcha.net>  Mon, 02 Oct 2023 13:47:00 +0100
 
